@@ -1,5 +1,6 @@
 0.5a	Improved output from -l (including driver list).
 	Added \F and \L output modes.
+	Added support for parameter binding.
 	Fixed various memory bugs.
 
 0.4a	Support for multiple result sets.
